lobiのスタイルシート

--- a/templates/group.html
+++ b/templates/group.html
@@ -1,4 +1,10 @@
 {% extends 'base.html' %}
+{% load static %}
+
+{% block style %}
+  {{ block.super }}
+  <link rel="stylesheet" href="{% static 'css/group.css' %}"
+{% endblock %}
 
 {% block content %}
 <div class="container">
