--- a/templates/base.html
+++ b/templates/base.html
@@ -45,6 +45,8 @@
     <!-- Custom styles for this template -->
     <link href="https://getbootstrap.jp/docs/5.0/examples/carousel/carousel.css" rel="stylesheet">
 
+    {% block style %}{% endblock %}
+
     
   </head>
 
