--- a/templates/group.html
+++ b/templates/group.html
@@ -55,28 +55,56 @@
         </div>
         <div class="chat-item-footer">
           <div class="chat-goo-button">
-            <svg class="icon svg-icon svg-fill"></svg>
-            <span class="goo-txt"></span>
+            <svg viewBox="0 0 768 768" class="icon svg-icon svg-fill"><path pid="0" d="M96 368h96v256H96V368zm533.792-96H435.04c10.464 0 22.656-32.16 30.4-54.208C487.168 155.872 494.752 112 494.752 112H377.376s-.928 42.752-14.144 71.936C323.232 271.968 224 369.888 224 369.888v234.624l375.104 49.12s20.512-104.864 30.208-178.56c9.696-73.664.48-203.072.48-203.072z"></path></svg>
+            <span class="goo-txt">ぐー</span>
           </div>
           <div class="chat-boo-button">
-            <svg class="icon svg-icon svg-fill"></svg>
-            <span class="boo-txt"></span>
+            <svg viewBox="0 0 768 768" class="icon svg-icon svg-fill"><path pid="0" d="M544 176h96v256h-96V176zM99.968 528H294.72c-10.464 0-22.656 32.16-30.4 54.208C242.56 644.128 235.008 688 235.008 688h117.376s4.064-43.936 17.28-73.12c40-88 142.336-187.136 142.336-187.136V193.12L133.792 144s-22.08 106.048-31.776 179.744C92.32 397.408 99.968 528 99.968 528z"></path>
+            </svg>
+            <span class="boo-txt">ぶー</span>
           </div>
           <span class="reply-button">
             <a class="chat-reply-button">
               <svg class="icon svg-icon svg-fill"></svg>
             </a>
           </span>
-          <div class="option-button">
-            <svg class="option-button__icon svg-icon svg-fill"></svg>
+        </div>
+        <ul>
+        </ul>
+        <div class="reply__chat-composer">
+          <div class="chat-composer chat-composer--chat-layout">
+            <div class="textarea-wrapper">
+              <img class="icon">
+              <textarea data-v-7ac26394="" maxlength="1000" placeholder="チャットを入力" class="textarea" style="max-height: 169px;"></textarea>
+            </div>
+            <div class="chat-composer-attachment-list"></div>
+            <div class="buttons buttons--left">
+              <div class="chat-button">
+                <label class="chat-button__label">
+                  <svg class="chat-button__icon svg-icon svg-fill"></svg>
+                </label>
+                <p class="chat-button__tooltip"></p>
+                <input class="chat-button__input">
+              </div>
+              <div class="chat-composer-stamp-butoon">
+                <svg class="chat-button__icon svg-icon svg-fill"></svg>
+                <p data-v-6229623c="" class="chat-composer-stamp-button__tooltip">スタンプ投稿</p>
+              </div>
+            </div>
+            <div class="buttons buttons--right">
+              <div class="submit-button">送信</div>
+            </div>
+            <p data-v-7ac26394="" class="chat-composer__description" style="display: none;">改行：return　送信：return + alt , return + ctrl , return + ⌘</p>
+          </div>
+        </div>
+        <div class="option-button">
+          <svg class="option-button__icon svg-icon svg-fill"></svg>
             <ul class="chat-item-option-balloon">
               <li class="item">
                 <a class="link"></a>
               </li>
             </ul>
-          </div>
         </div>
-        <div class="option-button"></div>
       </div>
     </div>
   </div>
