--- a/static/css/group.css
+++ b/static/css/group.css
@@ -8,6 +8,9 @@ a, abbr, acronym, address, applet, article, aside, audio, b, big, blockquote, bo
     font-size: 62.5%;
 }
 */
+body {
+    background-color: #f8f7f8;
+}
 a {
     color: #353130;
     text-decoration: none;
@@ -15,11 +18,6 @@ a {
 .chat-item {
     width: 100%;
     margin-bottom: 16px;
-}
-.chat-item:after {
-    content: " ";
-    display: table;
-    clear: both;
 }
 .user {
     position: relative;
@@ -63,7 +61,6 @@ a {
     content: "";
 }
 .content:after {
-    position: absolute;
     top: 13px;
     right: auto;
     bottom: auto;
@@ -83,12 +80,11 @@ a {
 .header__user-name {
     display: inline-block;
     margin-right: 4px;
-    font-size: 1.5rem;
     font-weight: 700;
 }
 .header__date {
-    font-size: 1.3rem;
     color: #888392;
+    display: block;
 }
 .body {
     padding: 0 20px;
@@ -123,8 +119,8 @@ a {
     display: inline-block;
     /* width: 32px; */
     height: 32px;
-    padding: 0;
-    font-size: 1.3rem;
+    /* padding: 0; */
+    /* font-size: 1.3rem; */
     text-align: center;
     line-height: 32px;
     border: 1px solid #9792a0;
@@ -145,15 +141,15 @@ a {
 }
 .svg-fill {
     fill: currentColor;
-    stroke: none;
+    /* stroke: none; */
 }
 .svg-icon {
     display: inline-block;
-    width: 16px;
-    height: 16px;
+    /* width: 16px; */
+    /* height: 16px; :/
     color: inherit;
     vertical-align: middle;
-    fill: none;
+    /* fill: none; */
     stroke: currentColor;
 }
 .goo-txt, .boo-txt, .bookmark-txt {
@@ -282,4 +278,25 @@ a {
     display: inline-block;
     color: #999;
     font-size: 1.2rem;
+}
+.reply__chat-composer {
+    background-color: #f3f2f4;
+    border-top: 1px solid #e7e6e9;
+    padding: 12px;
+    border-radius: 0 0 8px 8px;
+}
+.chat-composer--chat-layout {
+    padding: 12px 12px 6px;
+    -webkit-box-shadow: 0 1px 1px rgba(0,0,0,.2);
+    box-shadow: 0 1px 1px rgba(0,0,0,.2);
+    -webkit-box-shadow: none;
+    box-shadow: none;
+    margin-bottom: 8px;
+    background-color: #fff;
+    border-radius: 8px;
+    position: relative;
+    top: auto;
+    right: auto;
+    bottom: auto;
+    left: auto;
 }
