--- a/templates/group.html
+++ b/templates/group.html
@@ -4,7 +4,7 @@
 
 {% block style %}
   {{ block.super }}
-  <link rel="stylesheet" href="{% static 'css/group.css' %}?{% now 's' %}"
+  <link rel="stylesheet" href="{% static 'css/group.css' %}?{% now 's' %}">
 {% endblock %}
 
 {% block content %}
@@ -81,20 +81,19 @@
             <div class="buttons buttons--left">
               <div class="chat-button">
                 <label class="chat-button__label">
-                  <svg class="chat-button__icon svg-icon svg-fill"></svg>
+                  <svg data-v-7ac26394="" version="1.1" viewBox="0 0 32 32" class="chat-button__icon svg-icon svg-fill"><path pid="0" d="M26.182 2.182a3.636 3.636 0 0 1 3.636 3.636v20.364a3.636 3.636 0 0 1-3.636 3.636H5.818a3.636 3.636 0 0 1-3.636-3.636V5.818a3.636 3.636 0 0 1 3.636-3.636h20.364zm0-2.182H5.818A5.818 5.818 0 0 0 0 5.818v20.364A5.818 5.818 0 0 0 5.818 32h20.364A5.818 5.818 0 0 0 32 26.182V5.818A5.818 5.818 0 0 0 26.182 0z"></path><path pid="1" d="M8.727 12.727a4 4 0 1 1 0-8 4 4 0 0 1 0 8zm0-5.818a1.818 1.818 0 1 0 0 3.636 1.818 1.818 0 0 0 0-3.636zM21.905 12h-4.538a2.515 2.515 0 0 0-2.516 2.255C14.124 21.528 6.4 25.382.015 26.313c.014.735.167 1.46.451 2.138 6.036-.815 12.902-4.131 15.535-10.095h7.273a14.82 14.82 0 0 0 8.727 7.142v-2.327c-3.869-1.6-7.113-4.364-7.578-8.916A2.517 2.517 0 0 0 21.907 12zm-5.28 4.553a13.56 13.56 0 0 0 .393-2.007.35.35 0 0 1 .349-.291h4.538a.35.35 0 0 1 .349.291c.07.702.197 1.398.378 2.08l-6.007-.073z"></path></svg>
                 </label>
                 <p class="chat-button__tooltip"></p>
-                <input class="chat-button__input">
               </div>
               <div class="chat-composer-stamp-butoon">
-                <svg class="chat-button__icon svg-icon svg-fill"></svg>
+                <svg data-v-6229623c="" version="1.1" viewBox="0 0 32 32" class="icon svg-icon svg-fill"><path pid="0" d="M26.182 2.182a3.636 3.636 0 0 1 3.636 3.636v20.364a3.636 3.636 0 0 1-3.636 3.636H5.818a3.636 3.636 0 0 1-3.636-3.636V5.818a3.636 3.636 0 0 1 3.636-3.636h20.364zm0-2.182H5.818A5.818 5.818 0 0 0 0 5.818v20.364A5.818 5.818 0 0 0 5.818 32h20.364A5.818 5.818 0 0 0 32 26.182V5.818A5.818 5.818 0 0 0 26.182 0z"></path><path pid="1" d="M20.553 16.553a1.034 1.034 0 0 0-1.761.727c0 .273.11.536.306.727.582.64.815 1.251.669 1.687-.155.349-.48.591-.858.64a1.585 1.585 0 0 1-1.236-.378 1.454 1.454 0 0 1-.538-1.222 1.047 1.047 0 0 0-2.094 0c.029.47-.171.926-.538 1.222-.34.296-.789.434-1.236.378a1.09 1.09 0 0 1-.858-.64c-.145-.436.087-1.047.669-1.687a1.016 1.016 0 0 0 0-1.454 1.034 1.034 0 0 0-1.455 0 3.65 3.65 0 0 0-1.28 3.811 3.173 3.173 0 0 0 2.502 2.022c.184.014.369.014.553 0a3.715 3.715 0 0 0 2.371-.887c.085-.075.163-.158.233-.247.07.089.148.172.233.247a3.704 3.704 0 0 0 2.371.887c.184.014.369.014.553 0a3.173 3.173 0 0 0 2.502-2.022 3.653 3.653 0 0 0-1.105-3.811zM11.549 12.727c0 .803-.632 1.455-1.411 1.455s-1.411-.651-1.411-1.455c0-.803.632-1.455 1.411-1.455s1.411.651 1.411 1.455zM23.185 12.727c0 .803-.632 1.455-1.411 1.455s-1.411-.651-1.411-1.455c0-.803.632-1.455 1.411-1.455s1.411.651 1.411 1.455z"></path></svg>
                 <p data-v-6229623c="" class="chat-composer-stamp-button__tooltip">スタンプ投稿</p>
               </div>
             </div>
             <div class="buttons buttons--right">
               <div class="submit-button">送信</div>
             </div>
-            <p data-v-7ac26394="" class="chat-composer__description" style="display: none;">改行：return　送信：return + alt , return + ctrl , return + ⌘</p>
+            <p data-v-7ac26394="" class="chat-composer__description" style="font-size:10px;">改行：return　送信：return + alt , return + ctrl , return + ⌘</p>
           </div>
         </div>
         <div class="option-button">
