--- a/templates/top.html
+++ b/templates/top.html
@@ -20,7 +20,7 @@
           {% comment %}
           <svg class="bd-placeholder-img card-img-top" width="100%" height="225" xmlns="http://www.w3.org/2000/svg" role="img" aria-label="Placeholder: Thumbnail" preserveAspectRatio="xMidYMid slice" focusable="false"><title>Placeholder</title><rect width="100%" height="100%" fill="#55595c"/><text x="50%" y="50%" fill="#eceeef" dy=".3em">Thumbnail</text></svg>
           {% endcomment %}
-          <img src="{{ object.group.image.url }}">
+          <img src="{{ object.group.image.url }}" style="width:100%;">
           <div class="card-body">
             <h5 class="card-title">{{ object.group.name }}</h5>
             <p class="card-text">{{ object.group.memo }}</p>
