返信が三件以上ある場合

--- a/templates/group.html
+++ b/templates/group.html
@@ -72,6 +72,9 @@
           </span>
         </div>
         <ul class="reply-list reply-list--simple">
+          {% if chat_message.chatreply_set.all.count >= 3 %}
+          <li>三件以上ある</li>
+          {% endif %}
           {% for reply in chat_message.chatreply_set.all|slice:":2" %}
           <li class="reply-item reply-item--simple">
             <div class="header">
