--- a/templates/base.html
+++ b/templates/base.html
@@ -89,7 +89,7 @@
 
     <script src="https://getbootstrap.jp/docs/5.0/dist/js/bootstrap.bundle.min.js" integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM" crossorigin="anonymous"></script>
 
-      
+    {% block script %}{% endblock %}      
   </body>
 </html>
 
