--- a/templates/group.html
+++ b/templates/group.html
@@ -7,7 +7,7 @@
 <div class="card mb-3" style="">
     <div class="row g-0">
       <div class="col-md-4">
-        <img src="{{ object.image.url }}" style="width:100%">
+        <img src="{{ object.image.url }}" style="width:50%">
       </div>
       <div class="col-md-8">
         <div class="card-body">
@@ -22,11 +22,11 @@
 
   <form method="post" enctype="multipart/form-data">{% csrf_token %}
     <div class="mb-3">
-        <label for="exampleFormControlTextarea1" class="form-label">Example textarea</label>
+        <label for="exampleFormControlTextarea1" class="form-label">チャットを入力</label>
         <textarea class="form-control" id="exampleFormControlTextarea1" rows="3" name="chat"></textarea>
       </div>
       <div class="mb-3">
-        <label for="formFile" class="form-label">Default file input example</label>
+        <label for="formFile" class="form-label">画像を選択</label>
         <input class="form-control" type="file" id="formFile" name="image">
       </div>
       <div class="mb-3">
